edited about page

--- a/config.toml
+++ b/config.toml
@@ -11,20 +11,20 @@ metaDataFormat = "yaml"
   textFontFamily = "sans-serif"
   headingFontFamily = "sans-serif"
   siteBgColor = "gray"
-  sidebarBgColor = "near-black"
+  sidebarBgColor = "light-gray"
   headlineColor = "near-black"
   headingColor = "near-black"
   textColor = "dark-gray"
   sidebarTextColor = "near-black"
   bodyLinkColor = "black"
-  navLinkColor = "yellow"
+  navLinkColor = "black"
   sidebarLinkColor = "near-black"
-  footerTextColor = "near-black"
+  footerTextColor = "silver"
   buttonTextColor = "near-white"
   buttonBgColor = "black"
   buttonHoverTextColor = "white"
   buttonHoverBgColor = "blue"
-  borderColor = "near-black"
+  borderColor = "moon-gray"
   # show/hide social icons in site header/footer
   socialInHeader = false
   socialInFooter = false
