--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ metaDataFormat = "yaml"
   textColor = "dark-gray"
   sidebarTextColor = "near-black"
   bodyLinkColor = "black"
-  navLinkColor = "black"
+  navLinkColor = "yellow"
   sidebarLinkColor = "near-black"
   footerTextColor = "silver"
   buttonTextColor = "near-white"
