--- a/config.toml
+++ b/config.toml
@@ -10,16 +10,16 @@ metaDataFormat = "yaml"
   favicon = "https://raw.githubusercontent.com/lexahl/migraine/main/static/img/favicon.ico"
   textFontFamily = "sans-serif"
   headingFontFamily = "sans-serif"
-  siteBgColor = "gray"
+  siteBgColor = "silver"
   sidebarBgColor = "light-gray"
   headlineColor = "near-black"
   headingColor = "near-black"
   textColor = "dark-gray"
   sidebarTextColor = "near-black"
   bodyLinkColor = "black"
-  navLinkColor = "yellow"
+  navLinkColor = "purple"
   sidebarLinkColor = "near-black"
-  footerTextColor = "silver"
+  footerTextColor = "near-black"
   buttonTextColor = "near-white"
   buttonBgColor = "black"
   buttonHoverTextColor = "white"
