--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ metaDataFormat = "yaml"
   favicon = "https://raw.githubusercontent.com/lexahl/migraine/main/static/img/favicon.ico"
   textFontFamily = "sans-serif"
   headingFontFamily = "sans-serif"
-  siteBgColor = "silver"
+  siteBgColor = "moon-gray"
   sidebarBgColor = "light-gray"
   headlineColor = "near-black"
   headingColor = "near-black"
